parser.output
Nonterminals useless in grammar

   identifier_list


Terminals unused in grammar

   Operator
   Operator_ref
   Operator_deref
   Keyword
   Keyword_enum
   Keyword_struct
   Punctuator


Rules useless in grammar

  176 identifier_list: Ident
  177                | identifier_list Operator_comma Ident


State 17 conflicts: 10 shift/reduce
State 18 conflicts: 10 shift/reduce
State 275 conflicts: 1 shift/reduce


Grammar

    0 $accept: ROOT $end

    1 primary_EXPR: Ident
    2             | Constant
    3             | String
    4             | Punctuator_par_open EXPR Punctuator_par_close

    5 Ident: Identifier

    6 Constant: Constant_int
    7         | Constant_char
    8         | Constant_double
    9         | Constant_float
   10         | Constant_long_double

   11 postfix_EXPR: primary_EXPR
   12             | postfix_EXPR Punctuator_squ_open EXPR Punctuator_squ_close
   13             | postfix_EXPR Punctuator_par_open Punctuator_par_close
   14             | postfix_EXPR Punctuator_par_open argument_EXPR_list Punctuator_par_close
   15             | postfix_EXPR Operator_access Ident
   16             | postfix_EXPR Operator_deref_access Ident
   17             | postfix_EXPR Operator_addadd
   18             | postfix_EXPR Operator_subsub

   19 argument_EXPR_list: assignment_EXPR
   20                   | argument_EXPR_list Operator_comma assignment_EXPR

   21 unary_EXPR: postfix_EXPR
   22           | Operator_addadd unary_EXPR
   23           | Operator_subsub unary_EXPR
   24           | unary_operator cast_EXPR
   25           | Operator_sizeof unary_EXPR
   26           | Operator_sizeof Punctuator_par_open type_name Punctuator_par_close

   27 unary_operator: Operator_bit_and
   28               | Operator_mul
   29               | Operator_add
   30               | Operator_sub
   31               | Operator_bit_not
   32               | Operator_not

   33 cast_EXPR: unary_EXPR
   34          | Punctuator_par_open type_name Punctuator_par_close cast_EXPR

   35 multiplicative_EXPR: cast_EXPR
   36                    | multiplicative_EXPR Operator_mul cast_EXPR
   37                    | multiplicative_EXPR Operator_div cast_EXPR
   38                    | multiplicative_EXPR Operator_mod cast_EXPR

   39 additive_EXPR: multiplicative_EXPR
   40              | additive_EXPR Operator_add multiplicative_EXPR
   41              | additive_EXPR Operator_sub multiplicative_EXPR

   42 shift_EXPR: additive_EXPR
   43           | shift_EXPR Operator_sl additive_EXPR
   44           | shift_EXPR Operator_sr additive_EXPR

   45 relational_EXPR: shift_EXPR
   46                | relational_EXPR Operator_less shift_EXPR
   47                | relational_EXPR Operator_greater shift_EXPR
   48                | relational_EXPR Operator_less_equal shift_EXPR
   49                | relational_EXPR Operator_greater_equal shift_EXPR

   50 equality_EXPR: relational_EXPR
   51              | equality_EXPR Operator_equal relational_EXPR
   52              | equality_EXPR Operator_not_equal relational_EXPR

   53 BIT_AND_EXPR: equality_EXPR
   54             | BIT_AND_EXPR Operator_bit_and equality_EXPR

   55 BIT_XBIT_OR_EXPR: BIT_AND_EXPR
   56                 | BIT_XBIT_OR_EXPR Operator_bit_xor BIT_AND_EXPR

   57 BIT_OR_EXPR: BIT_XBIT_OR_EXPR
   58            | BIT_OR_EXPR Operator_bit_or BIT_XBIT_OR_EXPR

   59 LOGIC_AND_EXPR: BIT_OR_EXPR
   60               | LOGIC_AND_EXPR Operator_and BIT_OR_EXPR

   61 LOGIC_OR_EXPR: LOGIC_AND_EXPR
   62              | LOGIC_OR_EXPR Operator_or LOGIC_AND_EXPR

   63 conditional_EXPR: LOGIC_OR_EXPR
   64                 | LOGIC_OR_EXPR Operator_trinary_question EXPR Operator_trinary_choice conditional_EXPR

   65 assignment_EXPR: conditional_EXPR
   66                | unary_EXPR assignment assignment_EXPR

   67 assignment: Operator_assign
   68           | Operator_mul_assign
   69           | Operator_div_assign
   70           | Operator_mod_assign
   71           | Operator_add_assign
   72           | Operator_sub_assign
   73           | Operator_sl_assign
   74           | Operator_sr_assign
   75           | Operator_and_assign
   76           | Operator_xor_assign
   77           | Operator_or_assign

   78 EXPR: assignment_EXPR
   79     | EXPR Operator_comma assignment_EXPR

   80 constant_EXPR: conditional_EXPR

   81 declaration: declaration_specifiers init_declarator_list Punctuator_eol
   82            | declaration_specifiers Punctuator_eol

   83 declaration_specifiers: storage_class_specifier
   84                       | storage_class_specifier declaration_specifiers
   85                       | type_specifier
   86                       | type_specifier declaration_specifiers

   87 storage_class_specifier: Keyword_typedef

   88 init_declarator_list: init_declarator
   89                     | init_declarator_list Operator_comma init_declarator

   90 init_declarator: declarator
   91                | declarator Operator_assign initializer

   92 type_specifier: Keyword_void
   93               | Keyword_char
   94               | Keyword_short
   95               | Keyword_int
   96               | Keyword_long
   97               | Keyword_float
   98               | Keyword_double
   99               | Keyword_signed
  100               | Keyword_unsigned

  101 specifier_list: type_specifier
  102               | type_specifier specifier_list

  103 declarator: direct_declarator
  104           | pointer direct_declarator

  105 direct_declarator: Ident
  106                  | Punctuator_par_open declarator Punctuator_par_close
  107                  | direct_declarator Punctuator_squ_open Punctuator_squ_close
  108                  | direct_declarator Punctuator_squ_open constant_EXPR Punctuator_squ_close
  109                  | direct_declarator Punctuator_par_open parameter_type_list Punctuator_par_close
  110                  | direct_declarator Punctuator_par_open Punctuator_par_close

  111 pointer: Operator_mul
  112        | Operator_mul pointer

  113 parameter_type_list: parameter_list

  114 parameter_list: parameter_declaration
  115               | parameter_list Operator_comma parameter_declaration

  116 parameter_declaration: declaration_specifiers declarator
  117                      | declaration_specifiers
  118                      | declaration_specifiers abstract_declarator

  119 type_name: specifier_list
  120          | specifier_list abstract_declarator

  121 abstract_declarator: pointer
  122                    | pointer direct_abstract_declarator
  123                    | direct_abstract_declarator

  124 direct_abstract_declarator: Punctuator_par_open abstract_declarator Punctuator_par_close
  125                           | direct_abstract_declarator Punctuator_squ_open constant_EXPR Punctuator_squ_close
  126                           | Punctuator_squ_open constant_EXPR Punctuator_squ_close
  127                           | direct_abstract_declarator Punctuator_squ_open Punctuator_squ_close
  128                           | Punctuator_squ_open Punctuator_squ_close
  129                           | direct_abstract_declarator Punctuator_par_open parameter_type_list Punctuator_par_close
  130                           | Punctuator_par_open parameter_type_list Punctuator_par_close
  131                           | direct_abstract_declarator Punctuator_par_open Punctuator_par_close
  132                           | Punctuator_par_open Punctuator_par_close

  133 initializer: assignment_EXPR
  134            | Punctuator_cur_open initializer_list Punctuator_cur_close
  135            | Punctuator_cur_open initializer_list Operator_comma Punctuator_cur_close

  136 initializer_list: initializer
  137                 | initializer_list Operator_comma initializer

  138 statement: selection_statement
  139          | labeled_statement
  140          | compound_statement
  141          | EXPR_statement
  142          | iteration_statement
  143          | jump_statement

  144 labeled_statement: Keyword_case constant_EXPR Operator_trinary_choice statement
  145                  | Keyword_default Operator_trinary_choice statement

  146 compound_statement: Punctuator_cur_open declaration_list statement_list Punctuator_cur_close
  147                   | Punctuator_cur_open declaration_list Punctuator_cur_close
  148                   | Punctuator_cur_open statement_list Punctuator_cur_close
  149                   | Punctuator_cur_open Punctuator_cur_close

  150 declaration_list: declaration
  151                 | declaration_list declaration

  152 statement_list: statement
  153               | statement_list statement

  154 EXPR_statement: EXPR Punctuator_eol
  155               | Punctuator_eol

  156 selection_statement: Keyword_if Punctuator_par_open EXPR Punctuator_par_close statement Keyword_else statement
  157                    | Keyword_if Punctuator_par_open EXPR Punctuator_par_close statement
  158                    | Keyword_switch Punctuator_par_open EXPR Punctuator_par_close statement

  159 iteration_statement: Keyword_while Punctuator_par_open EXPR Punctuator_par_close statement
  160                    | Keyword_do statement Keyword_while Punctuator_par_open EXPR Punctuator_par_close Punctuator_eol
  161                    | Keyword_for Punctuator_par_open EXPR_statement EXPR_statement EXPR Punctuator_par_close statement
  162                    | Keyword_for Punctuator_par_open EXPR_statement EXPR_statement Punctuator_par_close statement

  163 jump_statement: Keyword_continue Punctuator_eol
  164               | Keyword_break Punctuator_eol
  165               | Keyword_return Punctuator_eol
  166               | Keyword_return EXPR Punctuator_eol

  167 translation_unit: external_declaration
  168                 | translation_unit external_declaration

  169 external_declaration: function_definition
  170                     | declaration

  171 function_definition: declarator compound_statement
  172                    | declarator declaration_list compound_statement
  173                    | declaration_specifiers declarator compound_statement
  174                    | declaration_specifiers declaration declaration_list compound_statement

  175 ROOT: translation_unit


Terminals, with rules where they appear

$end (0) 0
error (256)
Constant_int (258) 6
Constant_char (259) 7
Constant_double (260) 8
Constant_float (261) 9
Constant_long_double (262) 10
String (263) 3
Identifier (264) 5
Operator (265)
Operator_add (266) 29 40
Operator_sub (267) 30 41
Operator_addadd (268) 17 22
Operator_subsub (269) 18 23
Operator_mul (270) 28 36 111 112
Operator_div (271) 37
Operator_mod (272) 38
Operator_and (273) 60
Operator_or (274) 62
Operator_not (275) 32
Operator_assign (276) 67 91
Operator_equal (277) 51
Operator_not_equal (278) 52
Operator_greater (279) 47
Operator_less (280) 46
Operator_greater_equal (281) 49
Operator_less_equal (282) 48
Operator_bit_and (283) 27 54
Operator_bit_or (284) 58
Operator_bit_not (285) 31
Operator_bit_xor (286) 56
Operator_sl (287) 43
Operator_sr (288) 44
Operator_add_assign (289) 71
Operator_sub_assign (290) 72
Operator_mul_assign (291) 68
Operator_div_assign (292) 69
Operator_mod_assign (293) 70
Operator_and_assign (294) 75
Operator_or_assign (295) 77
Operator_xor_assign (296) 76
Operator_sr_assign (297) 74
Operator_sl_assign (298) 73
Operator_ref (299)
Operator_deref (300)
Operator_access (301) 15
Operator_deref_access (302) 16
Operator_sizeof (303) 25 26
Operator_trinary_question (304) 64
Operator_trinary_choice (305) 64 144 145
Operator_comma (306) 20 79 89 115 135 137
Keyword (307)
Keyword_void (308) 92
Keyword_char (309) 93
Keyword_short (310) 94
Keyword_int (311) 95
Keyword_long (312) 96
Keyword_float (313) 97
Keyword_double (314) 98
Keyword_signed (315) 99
Keyword_unsigned (316) 100
Keyword_case (317) 144
Keyword_default (318) 145
Keyword_if (319) 156 157
Keyword_else (320) 156
Keyword_switch (321) 158
Keyword_while (322) 159 160
Keyword_do (323) 160
Keyword_for (324) 161 162
Keyword_continue (325) 163
Keyword_break (326) 164
Keyword_return (327) 165 166
Keyword_enum (328)
Keyword_struct (329)
Keyword_typedef (330) 87
Punctuator (331)
Punctuator_eol (332) 81 82 154 155 160 163 164 165 166
Punctuator_par_open (333) 4 13 14 26 34 106 109 110 124 129 130 131
    132 156 157 158 159 160 161 162
Punctuator_par_close (334) 4 13 14 26 34 106 109 110 124 129 130 131
    132 156 157 158 159 160 161 162
Punctuator_squ_open (335) 12 107 108 125 126 127 128
Punctuator_squ_close (336) 12 107 108 125 126 127 128
Punctuator_cur_open (337) 134 135 146 147 148 149
Punctuator_cur_close (338) 134 135 146 147 148 149


Nonterminals, with rules where they appear

$accept (84)
    on left: 0
primary_EXPR (85)
    on left: 1 2 3 4, on right: 11
Ident (86)
    on left: 5, on right: 1 15 16 105
Constant (87)
    on left: 6 7 8 9 10, on right: 2
postfix_EXPR (88)
    on left: 11 12 13 14 15 16 17 18, on right: 12 13 14 15 16 17 18
    21
argument_EXPR_list (89)
    on left: 19 20, on right: 14 20
unary_EXPR (90)
    on left: 21 22 23 24 25 26, on right: 22 23 25 33 66
unary_operator (91)
    on left: 27 28 29 30 31 32, on right: 24
cast_EXPR (92)
    on left: 33 34, on right: 24 34 35 36 37 38
multiplicative_EXPR (93)
    on left: 35 36 37 38, on right: 36 37 38 39 40 41
additive_EXPR (94)
    on left: 39 40 41, on right: 40 41 42 43 44
shift_EXPR (95)
    on left: 42 43 44, on right: 43 44 45 46 47 48 49
relational_EXPR (96)
    on left: 45 46 47 48 49, on right: 46 47 48 49 50 51 52
equality_EXPR (97)
    on left: 50 51 52, on right: 51 52 53 54
BIT_AND_EXPR (98)
    on left: 53 54, on right: 54 55 56
BIT_XBIT_OR_EXPR (99)
    on left: 55 56, on right: 56 57 58
BIT_OR_EXPR (100)
    on left: 57 58, on right: 58 59 60
LOGIC_AND_EXPR (101)
    on left: 59 60, on right: 60 61 62
LOGIC_OR_EXPR (102)
    on left: 61 62, on right: 62 63 64
conditional_EXPR (103)
    on left: 63 64, on right: 64 65 80
assignment_EXPR (104)
    on left: 65 66, on right: 19 20 66 78 79 133
assignment (105)
    on left: 67 68 69 70 71 72 73 74 75 76 77, on right: 66
EXPR (106)
    on left: 78 79, on right: 4 12 64 79 154 156 157 158 159 160 161
    166
constant_EXPR (107)
    on left: 80, on right: 108 125 126 144
declaration (108)
    on left: 81 82, on right: 150 151 170 174
declaration_specifiers (109)
    on left: 83 84 85 86, on right: 81 82 84 86 116 117 118 173 174
storage_class_specifier (110)
    on left: 87, on right: 83 84
init_declarator_list (111)
    on left: 88 89, on right: 81 89
init_declarator (112)
    on left: 90 91, on right: 88 89
type_specifier (113)
    on left: 92 93 94 95 96 97 98 99 100, on right: 85 86 101 102
specifier_list (114)
    on left: 101 102, on right: 102 119 120
declarator (115)
    on left: 103 104, on right: 90 91 106 116 171 172 173
direct_declarator (116)
    on left: 105 106 107 108 109 110, on right: 103 104 107 108 109
    110
pointer (117)
    on left: 111 112, on right: 104 112 121 122
parameter_type_list (118)
    on left: 113, on right: 109 129 130
parameter_list (119)
    on left: 114 115, on right: 113 115
parameter_declaration (120)
    on left: 116 117 118, on right: 114 115
type_name (121)
    on left: 119 120, on right: 26 34
abstract_declarator (122)
    on left: 121 122 123, on right: 118 120 124
direct_abstract_declarator (123)
    on left: 124 125 126 127 128 129 130 131 132, on right: 122 123
    125 127 129 131
initializer (124)
    on left: 133 134 135, on right: 91 136 137
initializer_list (125)
    on left: 136 137, on right: 134 135 137
statement (126)
    on left: 138 139 140 141 142 143, on right: 144 145 152 153 156
    157 158 159 160 161 162
labeled_statement (127)
    on left: 144 145, on right: 139
compound_statement (128)
    on left: 146 147 148 149, on right: 140 171 172 173 174
declaration_list (129)
    on left: 150 151, on right: 146 147 151 172 174
statement_list (130)
    on left: 152 153, on right: 146 148 153
EXPR_statement (131)
    on left: 154 155, on right: 141 161 162
selection_statement (132)
    on left: 156 157 158, on right: 138
iteration_statement (133)
    on left: 159 160 161 162, on right: 142
jump_statement (134)
    on left: 163 164 165 166, on right: 143
translation_unit (135)
    on left: 167 168, on right: 168 175
external_declaration (136)
    on left: 169 170, on right: 167 168
function_definition (137)
    on left: 171 172 173 174, on right: 169
ROOT (138)
    on left: 175, on right: 0


State 0

    0 $accept: . ROOT $end

    Identifier           shift, and go to state 1
    Operator_mul         shift, and go to state 2
    Keyword_void         shift, and go to state 3
    Keyword_char         shift, and go to state 4
    Keyword_short        shift, and go to state 5
    Keyword_int          shift, and go to state 6
    Keyword_long         shift, and go to state 7
    Keyword_float        shift, and go to state 8
    Keyword_double       shift, and go to state 9
    Keyword_signed       shift, and go to state 10
    Keyword_unsigned     shift, and go to state 11
    Keyword_typedef      shift, and go to state 12
    Punctuator_par_open  shift, and go to state 13

    Ident                    go to state 14
    declaration              go to state 15
    declaration_specifiers   go to state 16
    storage_class_specifier  go to state 17
    type_specifier           go to state 18
    declarator               go to state 19
    direct_declarator        go to state 20
    pointer                  go to state 21
    translation_unit         go to state 22
    external_declaration     go to state 23
    function_definition      go to state 24
    ROOT                     go to state 25


State 1

    5 Ident: Identifier .

    $default  reduce using rule 5 (Ident)


State 2

  111 pointer: Operator_mul .
  112        | Operator_mul . pointer

    Operator_mul  shift, and go to state 2

    $default  reduce using rule 111 (pointer)

    pointer  go to state 26


State 3

   92 type_specifier: Keyword_void .

    $default  reduce using rule 92 (type_specifier)


State 4

   93 type_specifier: Keyword_char .

    $default  reduce using rule 93 (type_specifier)


State 5

   94 type_specifier: Keyword_short .

    $default  reduce using rule 94 (type_specifier)


State 6

   95 type_specifier: Keyword_int .

    $default  reduce using rule 95 (type_specifier)


State 7

   96 type_specifier: Keyword_long .

    $default  reduce using rule 96 (type_specifier)


State 8

   97 type_specifier: Keyword_float .

    $default  reduce using rule 97 (type_specifier)


State 9

   98 type_specifier: Keyword_double .

    $default  reduce using rule 98 (type_specifier)


State 10

   99 type_specifier: Keyword_signed .

    $default  reduce using rule 99 (type_specifier)


State 11

  100 type_specifier: Keyword_unsigned .

    $default  reduce using rule 100 (type_specifier)


State 12

   87 storage_class_specifier: Keyword_typedef .

    $default  reduce using rule 87 (storage_class_specifier)


State 13

  106 direct_declarator: Punctuator_par_open . declarator Punctuator_par_close

    Identifier           shift, and go to state 1
    Operator_mul         shift, and go to state 2
    Punctuator_par_open  shift, and go to state 13

    Ident              go to state 14
    declarator         go to state 27
    direct_declarator  go to state 20
    pointer            go to state 21


State 14

  105 direct_declarator: Ident .

    $default  reduce using rule 105 (direct_declarator)


State 15

  170 external_declaration: declaration .

    $default  reduce using rule 170 (external_declaration)


State 16

   81 declaration: declaration_specifiers . init_declarator_list Punctuator_eol
   82            | declaration_specifiers . Punctuator_eol
  173 function_definition: declaration_specifiers . declarator compound_statement
  174                    | declaration_specifiers . declaration declaration_list compound_statement

    Identifier           shift, and go to state 1
    Operator_mul         shift, and go to state 2
    Keyword_void         shift, and go to state 3
    Keyword_char         shift, and go to state 4
    Keyword_short        shift, and go to state 5
    Keyword_int          shift, and go to state 6
    Keyword_long         shift, and go to state 7
    Keyword_float        shift, and go to state 8
    Keyword_double       shift, and go to state 9
    Keyword_signed       shift, and go to state 10
    Keyword_unsigned     shift, and go to state 11
    Keyword_typedef      shift, and go to state 12
    Punctuator_eol       shift, and go to state 28
    Punctuator_par_open  shift, and go to state 13

    Ident                    go to state 14
    declaration              go to state 29
    declaration_specifiers   go to state 30
    storage_class_specifier  go to state 17
    init_declarator_list     go to state 31
    init_declarator          go to state 32
    type_specifier           go to state 18
    declarator               go to state 33
    direct_declarator        go to state 20
    pointer                  go to state 21


State 17

   83 declaration_specifiers: storage_class_specifier .
   84                       | storage_class_specifier . declaration_specifiers

    Keyword_void      shift, and go to state 3
    Keyword_char      shift, and go to state 4
    Keyword_short     shift, and go to state 5
    Keyword_int       shift, and go to state 6
    Keyword_long      shift, and go to state 7
    Keyword_float     shift, and go to state 8
    Keyword_double    shift, and go to state 9
    Keyword_signed    shift, and go to state 10
    Keyword_unsigned  shift, and go to state 11
    Keyword_typedef   shift, and go to state 12

    Keyword_void      [reduce using rule 83 (declaration_specifiers)]
    Keyword_char      [reduce using rule 83 (declaration_specifiers)]
    Keyword_short     [reduce using rule 83 (declaration_specifiers)]
    Keyword_int       [reduce using rule 83 (declaration_specifiers)]
    Keyword_long      [reduce using rule 83 (declaration_specifiers)]
    Keyword_float     [reduce using rule 83 (declaration_specifiers)]
    Keyword_double    [reduce using rule 83 (declaration_specifiers)]
    Keyword_signed    [reduce using rule 83 (declaration_specifiers)]
    Keyword_unsigned  [reduce using rule 83 (declaration_specifiers)]
    Keyword_typedef   [reduce using rule 83 (declaration_specifiers)]
    $default          reduce using rule 83 (declaration_specifiers)

    declaration_specifiers   go to state 34
    storage_class_specifier  go to state 17
    type_specifier           go to state 18


State 18

   85 declaration_specifiers: type_specifier .
   86                       | type_specifier . declaration_specifiers

    Keyword_void      shift, and go to state 3
    Keyword_char      shift, and go to state 4
    Keyword_short     shift, and go to state 5
    Keyword_int       shift, and go to state 6
    Keyword_long      shift, and go to state 7
    Keyword_float     shift, and go to state 8
    Keyword_double    shift, and go to state 9
    Keyword_signed    shift, and go to state 10
    Keyword_unsigned  shift, and go to state 11
    Keyword_typedef   shift, and go to state 12

    Keyword_void      [reduce using rule 85 (declaration_specifiers)]
    Keyword_char      [reduce using rule 85 (declaration_specifiers)]
    Keyword_short     [reduce using rule 85 (declaration_specifiers)]
    Keyword_int       [reduce using rule 85 (declaration_specifiers)]
    Keyword_long      [reduce using rule 85 (declaration_specifiers)]
    Keyword_float     [reduce using rule 85 (declaration_specifiers)]
    Keyword_double    [reduce using rule 85 (declaration_specifiers)]
    Keyword_signed    [reduce using rule 85 (declaration_specifiers)]
    Keyword_unsigned  [reduce using rule 85 (declaration_specifiers)]
    Keyword_typedef   [reduce using rule 85 (declaration_specifiers)]
    $default          reduce using rule 85 (declaration_specifiers)

    declaration_specifiers   go to state 35
    storage_class_specifier  go to state 17
    type_specifier           go to state 18


State 19

  171 function_definition: declarator . compound_statement
  172                    | declarator . declaration_list compound_statement

    Keyword_void         shift, and go to state 3
    Keyword_char         shift, and go to state 4
    Keyword_short        shift, and go to state 5
    Keyword_int          shift, and go to state 6
    Keyword_long         shift, and go to state 7
    Keyword_float        shift, and go to state 8
    Keyword_double       shift, and go to state 9
    Keyword_signed       shift, and go to state 10
    Keyword_unsigned     shift, and go to state 11
    Keyword_typedef      shift, and go to state 12
    Punctuator_cur_open  shift, and go to state 36

    declaration              go to state 37
    declaration_specifiers   go to state 30
    storage_class_specifier  go to state 17
    type_specifier           go to state 18
    compound_statement       go to state 38
    declaration_list         go to state 39


State 20

  103 declarator: direct_declarator .
  107 direct_declarator: direct_declarator . Punctuator_squ_open Punctuator_squ_close
  108                  | direct_declarator . Punctuator_squ_open constant_EXPR Punctuator_squ_close
  109                  | direct_declarator . Punctuator_par_open parameter_type_list Punctuator_par_close
  110                  | direct_declarator . Punctuator_par_open Punctuator_par_close

    Punctuator_par_open  shift, and go to state 40
    Punctuator_squ_open  shift, and go to state 41

    $default  reduce using rule 103 (declarator)


State 21

  104 declarator: pointer . direct_declarator

    Identifier           shift, and go to state 1
    Punctuator_par_open  shift, and go to state 13

    Ident              go to state 14
    direct_declarator  go to state 42


State 22

  168 translation_unit: translation_unit . external_declaration
  175 ROOT: translation_unit .

    Identifier           shift, and go to state 1
    Operator_mul         shift, and go to state 2
    Keyword_void         shift, and go to state 3
    Keyword_char         shift, and go to state 4
    Keyword_short        shift, and go to state 5
    Keyword_int          shift, and go to state 6
    Keyword_long         shift, and go to state 7
    Keyword_float        shift, and go to state 8
    Keyword_double       shift, and go to state 9
    Keyword_signed       shift, and go to state 10
    Keyword_unsigned     shift, and go to state 11
    Keyword_typedef      shift, and go to state 12
    Punctuator_par_open  shift, and go to state 13

    $default  reduce using rule 175 (ROOT)

    Ident                    go to state 14
    declaration              go to state 15
    declaration_specifiers   go to state 16
    storage_class_specifier  go to state 17
    type_specifier           go to state 18
    declarator               go to state 19
    direct_declarator        go to state 20
    pointer                  go to state 21
    external_declaration     go to state 43
    function_definition      go to state 24


State 23

  167 translation_unit: external_declaration .

    $default  reduce using rule 167 (translation_unit)


State 24

  169 external_declaration: function_definition .

    $default  reduce using rule 169 (external_declaration)


State 25

    0 $accept: ROOT . $end

    $end  shift, and go to state 44


State 26

  112 pointer: Operator_mul pointer .

    $default  reduce using rule 112 (pointer)


State 27

  106 direct_declarator: Punctuator_par_open declarator . Punctuator_par_close

    Punctuator_par_close  shift, and go to state 45


State 28

   82 declaration: declaration_specifiers Punctuator_eol .

    $default  reduce using rule 82 (declaration)


State 29

  174 function_definition: declaration_specifiers declaration . declaration_list compound_statement

    Keyword_void      shift, and go to state 3
    Keyword_char      shift, and go to state 4
    Keyword_short     shift, and go to state 5
    Keyword_int       shift, and go to state 6
    Keyword_long      shift, and go to state 7
    Keyword_float     shift, and go to state 8
    Keyword_double    shift, and go to state 9
    Keyword_signed    shift, and go to state 10
    Keyword_unsigned  shift, and go to state 11
    Keyword_typedef   shift, and go to state 12

    declaration              go to state 37
    declaration_specifiers   go to state 30
    storage_class_specifier  go to state 17
    type_specifier           go to state 18
    declaration_list         go to state 46


State 30

   81 declaration: declaration_specifiers . init_declarator_list Punctuator_eol
   82            | declaration_specifiers . Punctuator_eol

    Identifier           shift, and go to state 1
    Operator_mul         shift, and go to state 2
    Punctuator_eol       shift, and go to state 28
    Punctuator_par_open  shift, and go to state 13

    Ident                 go to state 14
    init_declarator_list  go to state 31
    init_declarator       go to state 32
    declarator            go to state 47
    direct_declarator     go to state 20
    pointer               go to state 21


State 31

   81 declaration: declaration_specifiers init_declarator_list . Punctuator_eol
   89 init_declarator_list: init_declarator_list . Operator_comma init_declarator

    Operator_comma  shift, and go to state 48
    Punctuator_eol  shift, and go to state 49


State 32

   88 init_declarator_list: init_declarator .

    $default  reduce using rule 88 (init_declarator_list)


State 33

   90 init_declarator: declarator .
   91                | declarator . Operator_assign initializer
  173 function_definition: declaration_specifiers declarator . compound_statement

    Operator_assign      shift, and go to state 50
    Punctuator_cur_open  shift, and go to state 36

    $default  reduce using rule 90 (init_declarator)

    compound_statement  go to state 51


State 34

   84 declaration_specifiers: storage_class_specifier declaration_specifiers .

    $default  reduce using rule 84 (declaration_specifiers)


State 35

   86 declaration_specifiers: type_specifier declaration_specifiers .

    $default  reduce using rule 86 (declaration_specifiers)


State 36

  146 compound_statement: Punctuator_cur_open . declaration_list statement_list Punctuator_cur_close
  147                   | Punctuator_cur_open . declaration_list Punctuator_cur_close
  148                   | Punctuator_cur_open . statement_list Punctuator_cur_close
  149                   | Punctuator_cur_open . Punctuator_cur_close

    Constant_int          shift, and go to state 52
    Constant_char         shift, and go to state 53
    Constant_double       shift, and go to state 54
    Constant_float        shift, and go to state 55
    Constant_long_double  shift, and go to state 56
    String                shift, and go to state 57
    Identifier            shift, and go to state 1
    Operator_add          shift, and go to state 58
    Operator_sub          shift, and go to state 59
    Operator_addadd       shift, and go to state 60
    Operator_subsub       shift, and go to state 61
    Operator_mul          shift, and go to state 62
    Operator_not          shift, and go to state 63
    Operator_bit_and      shift, and go to state 64
    Operator_bit_not      shift, and go to state 65
    Operator_sizeof       shift, and go to state 66
    Keyword_void          shift, and go to state 3
    Keyword_char          shift, and go to state 4
    Keyword_short         shift, and go to state 5
    Keyword_int           shift, and go to state 6
    Keyword_long          shift, and go to state 7
    Keyword_float         shift, and go to state 8
    Keyword_double        shift, and go to state 9
    Keyword_signed        shift, and go to state 10
    Keyword_unsigned      shift, and go to state 11
    Keyword_case          shift, and go to state 67
    Keyword_default       shift, and go to state 68
    Keyword_if            shift, and go to state 69
    Keyword_switch        shift, and go to state 70
    Keyword_while         shift, and go to state 71
    Keyword_do            shift, and go to state 72
    Keyword_for           shift, and go to state 73
    Keyword_continue      shift, and go to state 74
    Keyword_break         shift, and go to state 75
    Keyword_return        shift, and go to state 76
    Keyword_typedef       shift, and go to state 12
    Punctuator_eol        shift, and go to state 77
    Punctuator_par_open   shift, and go to state 78
    Punctuator_cur_open   shift, and go to state 36
    Punctuator_cur_close  shift, and go to state 79

    primary_EXPR             go to state 80
    Ident                    go to state 81
    Constant                 go to state 82
    postfix_EXPR             go to state 83
    unary_EXPR               go to state 84
    unary_operator           go to state 85
    cast_EXPR                go to state 86
    multiplicative_EXPR      go to state 87
    additive_EXPR            go to state 88
    shift_EXPR               go to state 89
    relational_EXPR          go to state 90
    equality_EXPR            go to state 91
    BIT_AND_EXPR             go to state 92
    BIT_XBIT_OR_EXPR         go to state 93
    BIT_OR_EXPR              go to state 94
    LOGIC_AND_EXPR           go to state 95
    LOGIC_OR_EXPR            go to state 96
    conditional_EXPR         go to state 97
    assignment_EXPR          go to state 98
    EXPR                     go to state 99
    declaration              go to state 37
    declaration_specifiers   go to state 30
    storage_class_specifier  go to state 17
    type_specifier           go to state 18
    statement                go to state 100
    labeled_statement        go to state 101
    compound_statement       go to state 102
    declaration_list         go to state 103
    statement_list           go to state 104
    EXPR_statement           go to state 105
    selection_statement      go to state 106
    iteration_statement      go to state 107
    jump_statement           go to state 108


State 37

  150 declaration_list: declaration .

    $default  reduce using rule 150 (declaration_list)


State 38

  171 function_definition: declarator compound_statement .

    $default  reduce using rule 171 (function_definition)


State 39

  151 declaration_list: declaration_list . declaration
  172 function_definition: declarator declaration_list . compound_statement

    Keyword_void         shift, and go to state 3
    Keyword_char         shift, and go to state 4
    Keyword_short        shift, and go to state 5
    Keyword_int          shift, and go to state 6
    Keyword_long         shift, and go to state 7
    Keyword_float        shift, and go to state 8
    Keyword_double       shift, and go to state 9
    Keyword_signed       shift, and go to state 10
    Keyword_unsigned     shift, and go to state 11
    Keyword_typedef      shift, and go to state 12
    Punctuator_cur_open  shift, and go to state 36

    declaration              go to state 109
    declaration_specifiers   go to state 30
    storage_class_specifier  go to state 17
    type_specifier           go to state 18
    compound_statement       go to state 110


State 40

  109 direct_declarator: direct_declarator Punctuator_par_open . parameter_type_list Punctuator_par_close
  110                  | direct_declarator Punctuator_par_open . Punctuator_par_close

    Keyword_void          shift, and go to state 3
    Keyword_char          shift, and go to state 4
    Keyword_short         shift, and go to state 5
    Keyword_int           shift, and go to state 6
    Keyword_long          shift, and go to state 7
    Keyword_float         shift, and go to state 8
    Keyword_double        shift, and go to state 9
    Keyword_signed        shift, and go to state 10
    Keyword_unsigned      shift, and go to state 11
    Keyword_typedef       shift, and go to state 12
    Punctuator_par_close  shift, and go to state 111

    declaration_specifiers   go to state 112
    storage_class_specifier  go to state 17
    type_specifier           go to state 18
    parameter_type_list      go to state 113
    parameter_list           go to state 114
    parameter_declaration    go to state 115


State 41

  107 direct_declarator: direct_declarator Punctuator_squ_open . Punctuator_squ_close
  108                  | direct_declarator Punctuator_squ_open . constant_EXPR Punctuator_squ_close

    Constant_int          shift, and go to state 52
    Constant_char         shift, and go to state 53
    Constant_double       shift, and go to state 54
    Constant_float        shift, and go to state 55
    Constant_long_double  shift, and go to state 56
    String                shift, and go to state 57
    Identifier            shift, and go to state 1
    Operator_add          shift, and go to state 58
    Operator_sub          shift, and go to state 59
    Operator_addadd       shift, and go to state 60
    Operator_subsub       shift, and go to state 61
    Operator_mul          shift, and go to state 62
    Operator_not          shift, and go to state 63
    Operator_bit_and      shift, and go to state 64
    Operator_bit_not      shift, and go to state 65
    Operator_sizeof       shift, and go to state 66
    Punctuator_par_open   shift, and go to state 78
    Punctuator_squ_close  shift, and go to state 116
